--- a/app/src/main/res/layout/activity_enrollment.xml
+++ b/app/src/main/res/layout/activity_enrollment.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".AudioPinEnrollmentActivity"
+    tools:context="com.test.test.enrollment.AudioPinEnrollmentActivity"
     android:background="@android:color/darker_gray">
 
     <TextView
